# InsightsLibrary

./: .gitattributes  .gitignore  .query_db.py  Dockerfile  LICENSE  README.md  README_CN.md  agents.py  config.py  decoder.py  embedder.py  extractor.py  ikb_mcp_server.py  large_models.py  logger.py  main.py  models.py  prompts.py  pyproject.toml  recognizer.py  smithery.yaml  test.py
faiss_index/: page_ids.npy
library_db/: tinydb_test.json
